			      CHANGES IN markdown VERSION 0.5.3

NEW FEATURES

  o C/C++ is now a supported language for code block highlighting.

MAJOR CHANGES

  o 'hard_wrap' has been dropped while 'mathjax' and 'highlight_code'
    have been added to the default list of html options.

BUG FIXES

  o fixed parsing of math equations when located at the end of
    a line.

			      CHANGES IN markdown VERSION 0.5.2

NEW FEATURES

  o with the new 'latex_math' markdown extensions, users can
    include math equations using several syntaxes. For
    block level equations, use $$latex ... $$, $$ ... $$, or
    \[ ... \]. For inline equations, use $latex...$, $...$,
    or \( ... \).

MAJOR CHANGES

  o the markdown extension 'ingore_math' was replaced with
    'latex_math'.

  o users can now use the markdown.HTML.stylesheet option to
    override the package default stylesheet.

  o setting the fragment_only rendering option or the fragment.only
    parameter to markdownToHTML will base64 encode images if
    applicable. version 0.5.1 did not.

			      CHANGES IN markdown VERSION 0.5.1

BUG FIXES

  o fixed a GUIDgenerator bug; for escaping math equations before
    markdown parsing begins.

  o image encoding was fixed for the case when there are more than
    one included in a markdown document.

			      CHANGES IN markdown VERSION 0.5

NEW FEATURES

  o added fragment.only parameter to markdownToHTML

  o added new html rendering options base64_images, fragment_only,
    mathjax, and highlight_code

  o added new markdown extension ignore_math

MAJOR CHANGES

  o removed safelink from default html rendering options

  o the default html rendering options are now hard_wrap, use_xhtml,
    smartypants, and base64_images.

BUG FIXES

  o fixed syntax errors in C exports

			      CHANGES IN markdown VERSION 0.4

NEW FEATURES

  o added support for post-processing HTML using smartypants filter

  o added optional support for rendering a table of contents

MAJOR CHANGES
