@@ -1,8 +1,8 @@
 Package: markdown
 Type: Package
 Title: Markdown rendering for R
-Version: 0.5.3
-Date: 2012-11-05
+Version: 0.5.4
+Date: 2013-01-24
 Author: JJ Allaire, Jeffrey Horner, Vicent Marti, and Natacha Porte
 Maintainer: Jeffrey Horner <jeffrey.horner@gmail.com>
 Description: Markdown is a plain-text formatting syntax that can be
@@ -11,6 +11,6 @@ Description: Markdown is a plain-text formatting syntax that can be
 Depends: R (>= 2.11.1)
 Suggests: RCurl
 License: GPL-3
-Packaged: 2012-11-05 20:00:20 UTC; hornerj
+Packaged: 2013-01-24 19:49:42 UTC; hornerj
 Repository: CRAN
-Date/Publication: 2012-11-06 07:07:46
+Date/Publication: 2013-01-25 07:42:05
